--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "express": "^4.12.4",
+        "ioredis": "^1.4.0",
+        "redis": "^0.12.1",
+        "socket.io": "^1.3.5"
     }
 }
